# docker_python

./: .gitignore  Dockerfile  docker-compose.yaml  entrypoint.sh  readme.md
docker-env/: .zshrc  Dockerfile  docker-compose.yml
docker-env/poetry/: pyproject.toml
poetry/: pyproject.toml
