[tool.poetry]
name = "general"
version = "1.1.0"
description = ""
authors = ["naka"]

[tool.poetry.dependencies]
# essential
python = "3.10.4"
pandas = "*"
numpy = "*"
scipy = "*"
xarray = "*"
scikit-learn = "*"
sympy = "*"
statsmodels = "*"

# utils
pyyaml = "*"
hydra-core = "*"
mlflow = "*"
isort = "*"
black = "*"
watermark = "*"

# server
jupyter = "*"
jupyterlab = "*"
ipywidgets = "*"
jupyterlab_code_formatter = "*"
streamlit = "*"
streamlit-aggrid = "*"
streamlit-plotly-events = "*"

# PPLs
# pystan = "*"
# cmdstanpy = "*"
# mako = "*"
# pymc3 = "*"
tensorflow-probability = "*"
pyro-ppl = "*"
numpyro = "*"
arviz = "*"

# GP, BO
GPy = "*"
GPyOpt = "*"
optuna = "*"
gpytorch = "*"
botorch = "*"

# DOE
pyDOE2 = "*"

# DL framework
# tensorflow = "*" # Unable to find tensorflow (1.14.0)
torch = "*"

# visualize
tqdm = "*"
matplotlib = "*"
seaborn = "*"
plotly = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=1.1.6"]
build-backend = "poetry.masonry.api"